// Protos/monitor.proto
syntax = "proto3";

option csharp_namespace = "PatientRecoverySystem.GrpcService";
package patient;

// --- Task 2: Monitor Messages ---

message MedicalDataRequest {
  string patientId       = 1;
  double temperature     = 2;
  string bloodPressure   = 3;
  string ecg             = 4;
  string notes           = 5;
}

message MedicalDataResponse {
  bool success = 1;
}

message GetMedicalDataRequest {
  string patientId = 1;
}

message MedicalRecordInfo {
  int32    recordId      = 1;
  string   patientId     = 2;
  double   temperature   = 3;
  string   bloodPressure = 4;
  string   ecg           = 5;
  string   notes         = 6;
  string   timestamp     = 7;
}

message GetMedicalDataResponse {
  repeated MedicalRecordInfo records = 1;
}
